--- a/analysis/Stud1_a.qmd
+++ b/analysis/Stud1_a.qmd
@@ -488,7 +488,8 @@ gt_apastyle <- function(gt_table, font.size=12) {
       table_body.border.bottom.style = "solid",
       column_labels.border.bottom.color = "black",
       column_labels.border.bottom.style = "solid",
-      column_labels.border.bottom.width = 1
+      column_labels.border.bottom.width = 1,
+      latex.use_longtable = FALSE
     ) |> 
       gt::opt_table_font(font = "times")
 }
@@ -512,19 +513,19 @@ table <- data.frame(
   Age = c('', make_age(df1a$Age), make_age(df1b$Age), make_age(df2$Age), make_age(df3$Age), "48.6.6 ± 14.1*", make_age(df5_attention$Age), make_age(df6$Age),'', make_age(df7a$Age), make_age(df7b$Age), make_age(df7c$Age),'', make_age(df8a$Age), make_age(df8b$Age), make_age(df9$Age), make_age(df10a$Age), make_age(df10b$Age), make_age(df10c$Age), make_age(df11a$Age), make_age(df11b$Age), '48.6 ± 13.1'),
   Range = c('', '18-69', '18-91', '18-58', '18-72', '18-92*', '18-73', '18-78', '', '18-79', '16-81', '18-72','', '16-60', '20-60', '18-93', '18-73', '17-76','18-50', '18-57', '18-60', '17-93'),
   Female_Percentage = c('', '69.4%', '70.1%', '60.3%', '59.6%', '50%*', '46.8%', '78.7%', '', '79.5%', '77.7%', '68.9%', '', '57.0%', '56.2%', '73.2%', '50.3%', '53.0%', '76%', '74.8%', '75.9%', '71.6%'),
-  Availability= c('', '', 'https://osf.io/3m5nh', 'https://osf.io/5x9sg', 'https://osf.io/j6ef3', 'https://osf.io/ms354', 'https://osf.io/mp3cy', 'https://osf.io/xwz6g', '', '', 'https://osf.io/3f2h6', '','','', 'https://osf.io/3eztd', 'https://osf.io/7p9u5', 'https://github.com/RealityBending/IllusionGameReliability', 'https://github.com/DominiqueMakowski/PHQ4R', 'https://github.com/RealityBending/InteroceptionPrimals', 'https://osf.io/49wbv', '','')
+  Availability= c('', '', 'osf.io/3m5nh', 'osf.io/5x9sg', 'osf.io/j6ef3', 'osf.io/ms354', 'osf.io/mp3cy', 'osf.io/xwz6g', '', '', 'osf.io/3f2h6', '','','', 'osf.io/3eztd', 'osf.io/7p9u5', 'github.com/RealityBending/IllusionGameReliability', 'github.com/DominiqueMakowski/PHQ4R', 'github.com/RealityBending/InteroceptionPrimals', 'osf.io/49wbv', '','')
 ) 
 
 table_apa <- table |> 
   gt() |>
   cols_align(align = c("right"), columns = "Age") |> 
   cols_label(Age = "Age (Mean  ± SD)", Female_Percentage = "Female %") |> 
-  tab_footnote("* Information taken from the sample description of relevant paper rather than recomputed.") |> 
-  gt_apastyle() 
+  tab_footnote("* Information taken from the sample description of relevant paper rather than recomputed.")
   
-table_apa
-gtsave(table_apa, "figures/table1.tex")
-gtsave(table_apa, "figures/table1.png")
+gt_apastyle(table_apa, font.size=12)
+gtsave(gt_apastyle(table_apa, font.size=9), "figures/table1.tex")
+
+# gtsave(table_apa, "figures/table1.png")
 ```
 
 
