updated manuscript + added extension

--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -557,3 +557,25 @@
   year={2023},
   publisher={Taylor \& Francis}
 }
+
+@article{schandry1981heart,
+  title={Heart beat perception and emotional experience},
+  author={Schandry, Rainer},
+  journal={Psychophysiology},
+  volume={18},
+  number={4},
+  pages={483--488},
+  year={1981},
+  publisher={Wiley Online Library}
+}
+
+@article{kleckner2015methodological,
+  title={Methodological recommendations for a heartbeat detection-based measure of interoceptive sensitivity},
+  author={Kleckner, Ian R and Wormwood, Jolie Baumann and Simmons, W Kyle and Barrett, Lisa Feldman and Quigley, Karen S},
+  journal={Psychophysiology},
+  volume={52},
+  number={11},
+  pages={1432--1440},
+  year={2015},
+  publisher={Wiley Online Library}
+}
