--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -101,6 +101,9 @@ format:
   apaquarto-pdf:
     # Can be jou (journal), man (manuscript), stu (student), or doc (document)
     documentmode: man
+    include-in-header:
+      - text: |
+          \usepackage{lscape}
   apaquarto-docx: default
   apaquarto-html: default
 editor: 
@@ -199,8 +202,9 @@ A total of 10 studies was included (see **Table 1**).
 We also included the data of two unpublished (but already open-access) studies from the authors and one from another author.
 The total N participants was 32,214 participants (*Mean* = 48.6 years, *SD* = 13.1, 71.6% Female).
 
-<!-- This only works when redering to pdf right? -->
+\begin{landscape}
 \input{../../analysis/figures/table1.tex}
+\end{landscape}
 
 #### Statistical Analysis
 
