more paragraph up

--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -166,16 +166,18 @@ Discussions have also been focused on specific items. For instance, @murphy2019 
 Additionally, @campos2021 suggests that the "tickle" item represents a more specific *(separate?*) factor.
 Interestingly, @lin2023 reported that all items of the IAS grouped together using a new approach, Exploratory Graph Analysis [EGA; @golino2017exploratory], to assess convergent and discriminant validity, providing further evidence for unidimensionality.
 
+<!-- Relationship with other interoception measures -->
+
+The IAS has naturally been compared to other interoception-related scales, and shows a positive correlations with most facets of the MAIA **(TODO: MAIA should be introduced before)**, except for the Non-Distracting and Not-Worrying subscales [@brand2023]. Interestingly, findings on the correlation between the IAS and the body awareness dimension of the Body Perception Questionnaire [BPQ-A, @porges1993body] have been mixed: some studies report small positive correlations [@brand2023; @campos2021; @koike2023], while others find small negative correlations [@lin2023] or no correlation at all [@murphy2019]. Small positive correlations have also been observed with the "observation" and "description" subscales of the Five Facet Mindfulness Questionnaire [FFMQ, @baer2006using; @brand2023; @koike2023], as well as with the "non-reactivity" and "acting with awareness" subscales [@koike2023]. Additionally, the IAS has shown a positive correlation with the interoceptive awareness subscale of the Eating Disorder Inventory [@lin2023] and a negative correlation with the Interoceptive Confusion Questionnaire [ICQ, @brewer2016alexithymia; @brand2023; @murphy2019]. Lastly, small positive correlations have also been reported with the Interoceptive Attention Scale [IATS, @gabriele2022dissociations], though studies have also found no correlation between these measures [@gabriele2022dissociations] **(TODO: why same reference for two contradictory claims?)**.
+
 <!-- TO BE COMPLETED -->
 
 <!-- Convergent validity (correlates)  -->
 
-While the assessment of the validity of an interoception scale can be conceived as theoretically challenging, several traits have been used to assess convergent validity for the the IAS, including expected negative associations with alexithymia [@brand2023; @koike2023; @campos2021, @murphy2019; @lin2023], somatic symptoms [@brand2023; @koike2023, @lin2023], depressive symptoms [@brand2023; @koike2023; @lin2023], anxiety [@brand2023], neuroticism [@brand2023] and self-esteem [@murphy2019]. 
+While assessing the validity of an interoception scale can be conceived as theoretically challenging, several measures have been used to assess convergent validity for the the IAS, including expected negative associations with alexithymia [@brand2023; @koike2023; @campos2021, @murphy2019; @lin2023], somatic symptoms [@brand2023; @koike2023, @lin2023], depressive symptoms [@brand2023; @koike2023; @lin2023], anxiety [@brand2023], neuroticism [@brand2023] and self-esteem [@murphy2019]. 
 <!-- **anything else?**. TO BE COMPLETED -- to be determined -->
 
-The IAS has also been compared to other interoception scales (and interoceptive related scales),generally showing positive correlations with most facets of the MAIA, except for the Non-Distracting and Not-Worrying subscales [@brand2023]. Findings on the correlation between the IAS and the body awareness dimension of the Body Perception Questionnaire (BPQ-A; @porges1993body) have been mixed: some studies report small positive correlations [@brand2023; @campos2021; @koike2023], while others find small negative correlations [@lin2023] or no correlation at all [@murphy2019]. Small positive correlations have also been observed with the observation and description subscales of the Five Facet Mindfulness Questionnaire (FFMQ, @baer2006using; @brand2023; @koike2023), as well as with the nonreactivity and acting with awareness subscales [@koike2023]. Additionally, the IAS has shown a positive correlation with the interoceptive awareness subscale of the Eating Disorder Inventory [@lin2023] and a negative correlation with the Interoceptive Confusion Questionnaire [ICQ, @brewer2016alexithymia; @brand2023; @murphy2019]. Lastly, small positive correlations have been reported between the Interoceptive Attention Scale (IATS, @gabriele2022dissociations) and the IAS [@lin2023; @koike2023], though studies have also found no correlation between these measures [@gabriele2022dissociations].
 
-<!-- TO BE COMPLETED -->
 
 <!-- Moreover, the current subjective measures do not correlate well with the objective measures [@murphy2019]. -->
 
